Scroll bar always visible (avoid jumping horizontally); tag page in table structure to wrap text properly.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,6 +9,9 @@ dl, dd, ol, ul, figure {
 }
 
 
+html{
+  overflow-y: scroll;
+}
 
 /**
  * Basic styling
